[gd_scene load_steps=16 format=3 uid="uid://cxw6tc65b0iwr"]

[ext_resource type="Script" uid="uid://cgqsikv5uk8v4" path="res://scripts/MainMenu.gd" id="1_main_menu"]
[ext_resource type="AudioStream" uid="uid://bi56v68uk67c8" path="res://audio/music/MainMenuMusic.ogg" id="2_0ykhv"]
[ext_resource type="Script" uid="uid://b6wqi7wvh7nk7" path="res://scripts/CardRainBackground.gd" id="3_card_rain"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_start_normal"]
bg_color = Color(0.15, 0.25, 0.15, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.6, 0.4, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_start_pressed"]
bg_color = Color(0.12, 0.2, 0.12, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.35, 0.5, 0.35, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_start_hover"]
bg_color = Color(0.2, 0.35, 0.2, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.5, 0.7, 0.5, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.1, 0.1, 0.1, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.35, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal_pressed"]
bg_color = Color(0.08, 0.08, 0.08, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.3, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal_hover"]
bg_color = Color(0.15, 0.15, 0.18, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.4, 0.5, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_challenge_normal"]
bg_color = Color(0.2, 0.1, 0.15, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.45, 0.3, 0.4, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_challenge_pressed"]
bg_color = Color(0.17, 0.08, 0.12, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.25, 0.35, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_challenge_hover"]
bg_color = Color(0.28, 0.15, 0.22, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.4, 0.5, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exit_normal"]
bg_color = Color(0.22, 0.2, 0.05, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.45, 0.4, 0.2, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exit_pressed"]
bg_color = Color(0.18, 0.16, 0.04, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.35, 0.15, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exit_hover"]
bg_color = Color(0.3, 0.27, 0.1, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.55, 0.3, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 6
shadow_offset = Vector2(0, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="BackgroundLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackgroundGradient" type="ColorRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0052856896, 0.013606935, 0.043594733, 1)

[node name="BackgroundPattern" type="ColorRect" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.08, 0.15, 0.25, 0.15)

[node name="CardRainBackground" type="Control" parent="BackgroundLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_card_rain")

[node name="CardContainer" type="Control" parent="BackgroundLayer/CardRainBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ParticleContainer" type="Control" parent="BackgroundLayer/CardRainBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.287
anchor_top = 0.132
anchor_right = 0.713
anchor_bottom = 0.86
offset_left = 90.958
offset_top = 82.624
offset_right = -90.9581
offset_bottom = -76.48
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="GameTitle" type="Label" parent="MenuContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_font_sizes/font_size = 48
text = "Card Vault Keeper: Arena"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_start_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_start_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_start_hover")
text = "START GAME"

[node name="OptionsButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_normal_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_normal_hover")
text = "OPTIONS"

[node name="HelpButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_normal_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_normal_hover")
text = "HELP"

[node name="ChallengeButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_challenge_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_challenge_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_challenge_hover")
text = "CHALLENGE HUB"

[node name="CreditsButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_normal_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_normal_hover")
text = "CREDITS"

[node name="StatsButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_normal_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_normal_hover")
text = "STATS"

[node name="ExitButton" type="Button" parent="MenuContainer/ButtonsContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_exit_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_exit_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_exit_hover")
text = "EXIT"

[node name="FooterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -242.5
offset_top = -20.0
offset_right = 242.5
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 10

[node name="VersionLabel" type="Label" parent="FooterContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
theme_override_font_sizes/font_size = 15
text = "Version 1.0.1.0"
horizontal_alignment = 1

[node name="AudioManager" type="Node" parent="."]

[node name="MenuMusicPlayer" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("2_0ykhv")
volume_db = 3.0

[node name="UIPlayer" type="AudioStreamPlayer" parent="AudioManager"]
volume_db = -5.0

[node name="HoverPlayer" type="AudioStreamPlayer" parent="AudioManager"]
volume_db = -12.0

[node name="TransitionLayer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TransitionOverlay" type="ColorRect" parent="TransitionLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TransitionLabel" type="Label" parent="TransitionLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1
